# s4

./: .gitignore  CMakeLists.txt  README.md
include/: s4_background.h  s4_camera.h  s4_common.h  s4_cube_test.h  s4_debug.h  s4_input.h  s4_math.h  s4_player.h  s4_plot_test.h  s4_renderer.h  s4_shader_pool.h  s4_shaders.h  s4_vertex_object_pool.h
src/: main.c  s4_background.c  s4_camera.c  s4_debug.c  s4_input.c  s4_math.c  s4_player.c  s4_plot_test.c  s4_renderer.c  s4_shader_pool.c  s4_vertex_object_pool.c
t/: m.c  m2.c  m3.c  s4
